2000-05-22  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el: Merge WEMY.
	* semi-def.el: Ditto.

	* mime-view.el (mime-preview-toggle-button): Force hiding
	a button when condition is 'hide.
	(mime-preview-buttonize): Don't toggle button.
	(mime-preview-unbuttonize): Ditto.

	* semi-def.el (mime-use-widget): New variable.

2000-05-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.6 is released.

2000-05-16   Daiki Ueno  <ueno@unixuser.org>

	* mime-image.el (mime-image-create) [XEmacs]: Don't call
	`make-image-instance' directly.

2000-05-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-edit.el (mime-edit-mime-version-field-for-message/partial):
	Remove mime-edit-version.
	(mime-edit-message-default-max-lines): Increment to 5000.
	(mime-edit-split-and-send):
	(mime-edit-exit):
	Shut up byte compiler.

2000-05-16  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-automatic-conversion): New variable.
	(mime-display-text): Decode CTE when FLIM 1.14.

2000-05-12  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view (mime-display-entity): Show header when message
	is attachment.
	(mime-display-text): Pass 7bit when no CTE is specified.
	Use mime-entity-body if available.
	(mime-display-message): Reconstruct list every time.

2000-05-02   Daiki Ueno  <ueno@unixuser.org>

	* pgg-gpg.el (pgg-scheme-encrypt-region): Don't quote recipient;
	concatenate all arguments destructively.

2000-04-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* EMY 1.13.5 is released.

2000-04-17  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-view-insert-entity-button): Don't pass
	invisible to mime-insert-button.

2000-04-15  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-preview-text): Ask Content-Transfer-Encoding.
	(mime-display-text): New function.

2000-04-14  Yoshiki Hayashi  <yoshiki@xemacs.org>

	* mime-view.el (mime-display-gzipped): Use decode-coding-string.

2000-04-13   Daiki Ueno  <ueno@unixuser.org>
